unpackaged/main/default/objects/sked_Optimizer_Default_Setting__mdt/sked_Optimizer_Default_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Defines optimizing default constraints for all Collection Operations</description>
    <label>Skedulo Optimizer Default Setting</label>
    <pluralLabel>Skedulo Optimizer Default Settings</pluralLabel>
</CustomObject>