unpackaged/main/default/objects/sked_Optimizer_Default_Setting__mdt/fields/sked_Default_Weight__c.field-meta.xml
<CustomField>
    <fullName>sked_Default_Weight__c</fullName>
    <label>Default Weight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>