unpackaged/main/default/objects/sked_Optimizer_Default_Setting__mdt/fields/sked_Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Type__c</fullName>
    <label>Drive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Site</fullName>
                <default>true</default>
                <label>Fixed Site</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>